Fix header title alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -115,7 +115,7 @@ input {
     font-weight: normal;
     margin: 0;
     padding: 0.5em;
-    padding-left: 7.5em;
+    padding-left: 11.5em;
     justify-content: center;
     align-items: center;
     text-transform: none;
